--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,14 +1,20 @@
-<html>
-    <head>
-
-    </head>
-    <body>
+{% extends 'base.html' %}
+{% block content %}
+    <ul class="collapsible" data-collapsible="accordion">
         {% for task in tasks %}
-            {{task.task_name}}
-            {{task.category_name}}
-            {{task.task_description}}
-            {{task.is_urgent}}
-            {{task.due_date}}
+        <li>
+            <div class="collapsible-header">
+
+                <div class=" task_header col s9">
+                    <i class="material-icons">expand_more</i> {{task.task_name}} - {{task.due_date}}
+                </div>
+            </div>
+            <div class="collapsible-body">
+                <span>
+                    {{task.task_description}}
+                </span>
+            </div>
+        </li>
         {% endfor %}
-    </body>
-</html>
+    </ul>
+{% endblock %}
